@@ -386,7 +386,7 @@
 		</td>
 	</tr>
 	<tr style='vertical-align: middle;'>
-		<td id='vboxToolbarMain' style='height: 66px;' class='vboxToolbarGrad'>
+		<td id='vboxToolbarMain' style='height: 1%' class='vboxToolbarGrad'>
 			<!--
 				
 				VM list toolbar
